# raytracer

./: .flake8  .gitignore  LICENSE  Makefile  README.md  build.py  pyproject.toml
.github/workflows/: main.yaml
raytracer/: cli.py
raytracer/core/: config.py  constants.py  types.py
raytracer/core/types/: base.py  base_vector.c  base_vector.pyx  colour.c  colour.pyx  entities.py  geometry.py  imaging.py
raytracer/imaging/: service.py  types.py
raytracer/imaging/cli/: __init__.py  ball.py
raytracer/rendering/: constants.py  engine.py  shading.py
raytracer/rendering/cli/: __init__.py  render_scene.py
scenes/: scene_1.json
tests/: conftest.py
tests/core/: test_types.py
tests/core/types/: test_entities.py  test_geometry.py  test_imaging.py
tests/imaging/: test_cli.py  test_service.py  test_types.py
tests/rendering/: test_cli.py  test_engine.py  test_shading.py
